--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-react-parser": "^5.2.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.476.0",
+    "motion": "^12.8.0",
     "next": "^15.2.2-canary.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
